Fix accessibility issues with search bar (color contrast, focus indicator, decorative icons) (#1747)
This PR:

- adds `aria-hidden="true"` to the search item and search bar icons (as neither convey meaning themselves)
- adds a proper accessible name for the search bar via `<label>` rather than `aria-label`
- changes focus indicator for search bar to conform with [WCAG 2.2 SC 2.4.13](https://www.w3.org/TR/WCAG22/#focus-appearance)
- adds the `.sr-only` utility class for screenreader-only text (surprised that I had not done this before)

Note: this *does* cause a visual change for users of the theme (particularly noticeable with the focus indicator). I believe this is the correct thing to do re: accessibility, but users can always revert this change with custom SCSS.

--- a/_sass/search.scss
+++ b/_sass/search.scss
@@ -61,7 +61,8 @@
   }
 
   &:focus {
-    outline: 0;
+    outline: 2px solid $link-color;
+    outline-offset: -2px;
 
     + .search-label .search-icon {
       color: $link-color;
